--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </video>
 
   <div class="content">
-    <div class="headline">Have A Pawfect Day!</div>
+    <div class="headline">One Day At A Time...</div>
     <div class="date" id="dateText">--/--/--</div>
   </div>
 </div>
