--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Psych Diaries · Pawfect Day</title>
 
 <!-- Prettier fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Momo+Signature&display=swap" rel="stylesheet">
 
 <style>
   * { box-sizing: border-box; }
@@ -21,11 +21,11 @@
   /* ===== SMALL SCALLOPED WIDGET ===== */
   .poster {
     position: relative;
-    width: min(320px, 90vw);   /* <<< MUCH smaller */
+    width: min(260px, 90vw);   /* <<< MUCH smaller */
     aspect-ratio: 1 / 1;
     overflow: hidden;
 
-    --r: 14px;
+    --r: 10px;
 
     mask:
       radial-gradient(circle at top left, transparent var(--r), black 0),
@@ -66,10 +66,11 @@
   }
 
   .headline {
-    font-family: "Playfair Display", serif;
-    font-size: 22px;          /* <<< smaller */
-    font-weight: 600;
-    margin: 0 0 18px;
+    font-family: "Momo Signature", cursive;
+  font-size: 22px;
+  font-weight: 400; 
+  margin: 0 0 18px;
+
   }
 
   .date {
