--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Psych Diaries · Pawfect Day</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Momo+Signature&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
+<!-- Fonts: handwritten for headline + date -->
+<link href="https://fonts.googleapis.com/css2?family=Momo+Signature&display=swap" rel="stylesheet">
 
 <style>
   * { box-sizing: border-box; }
@@ -17,6 +18,7 @@
     place-items: center;
   }
 
+  /* ===== SMALL SCALLOPED WIDGET ===== */
   .poster {
     position: relative;
     width: min(260px, 90vw);
@@ -37,27 +39,28 @@
     box-shadow: 0 16px 40px rgba(0,0,0,.22);
   }
 
-  /* VIDEO: "move the cat up" by shifting the framing */
+  /* ===== VIDEO BACKGROUND ===== */
   .poster video {
     position: absolute;
     inset: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center 28%; /* LOWER % = cat appears higher */
+    object-position: center 52%; /* higher % = cat moves DOWN */
     opacity: 1;
     pointer-events: none;
   }
 
+  /* ===== CONTENT ===== */
   .content {
     position: relative;
     z-index: 2;
     height: 100%;
-    padding: 20px 18px 16px;       /* a bit more bottom space control */
+    padding: 22px 18px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between; /* headline top, date bottom */
+    justify-content: flex-start; /* date + headline at top */
     text-align: center;
     color: #111;
   }
@@ -66,17 +69,19 @@
     font-family: "Momo Signature", cursive;
     font-size: 22px;
     font-weight: 400;
-    margin: 0;
+    margin: 0 0 6px;
     transform: rotate(-1deg);
   }
 
+  /* Handwritten dd.mm.yy */
   .date {
-    font-family: "Poppins", sans-serif;
-    font-size: 44px;
-    font-weight: 800;
-    letter-spacing: .5px;
+    font-family: "Momo Signature", cursive;
+    font-size: 30px;     /* smaller + diary-like */
+    font-weight: 400;
+    letter-spacing: 0;   /* keep script natural */
     line-height: 1;
-    margin: 0;
+    margin: 0 0 14px;    /* space before cat */
+    transform: rotate(-1deg);
   }
 
   .headline, .date {
@@ -100,7 +105,7 @@
 
   <div class="content">
     <div class="headline">One Day At A Time...</div>
-    <div class="date" id="dateText">--/--/--</div>
+    <div class="date" id="dateText">--.--.--</div>
   </div>
 </div>
 
@@ -109,7 +114,7 @@
   const day = String(d.getDate()).padStart(2, "0");
   const month = String(d.getMonth() + 1).padStart(2, "0");
   const year = String(d.getFullYear()).slice(-2);
-  document.getElementById("dateText").textContent = `${day}/${month}/${year}`;
+  document.getElementById("dateText").textContent = `${day}.${month}.${year}`;
 </script>
 
 </body>
