--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   html, body {
     height: 100%;
     margin: 0;
-    background: #f4f4f6;
+    background: #FFFFFF;
     display: grid;
     place-items: center;
   }
