--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   html, body {
     height: 100%;
     margin: 0;
-    background: #f7f6f3;
+    background: transparent;
     display: grid;
     place-items: center;
   }
